# ChineseLearning

./: .gitignore  README.md
.github/workflows/: deploy-pages.yml
materials/: README.md
pipeline/: README.md  pyproject.toml
pipeline/resources/: mini_cedict.u8
pipeline/scripts/: annotate_published_decks.py  augment_docx_published_deck_with_vocab.py  enrich_deck_images_unsplash.py  extract_expanded_pdf_content.py  import_docx_study_pack.py
pipeline/src/chinese_flashcards/: backfill_examples.py  card_metadata.py  cli.py  dictionary.py  llm.py  models.py  pinyin_utils.py  pipeline.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/public/content/: manifest.json
web/public/content/drafts/: draft-weekend-library-expansion.json
web/public/content/materials/: material-expanded-vocabulary-lessons-1-9.json  material-hospital-route.json  material-oon-dich-viet-1.json  material-type-answer-reading-bonus.json  material-weekend-library.json
web/public/content/published/: deck-expanded-vocabulary-lessons-1-9.json  deck-hospital-route.json  deck-oon-dich-viet-1.json  deck-type-answer-reading-bonus.json  deck-weekend-library-core.json
web/src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
web/src/components/: DashboardView.tsx  DraftsView.tsx  LibraryView.tsx  NavigationRail.tsx  ReaderView.tsx  ReviewView.tsx
web/src/hooks/: useContentLibrary.ts  useSpeech.ts  useStudyRecords.ts
web/src/lib/: cardExample.ts  cardMetadata.ts  content.ts  exporters.ts  imageFilter.ts  indexedDb.ts  reviewSession.ts  srs.ts
