[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "chinese-flashcards-pipeline"
version = "0.1.0"
description = "Local OCR and flashcard extraction pipeline for Hanzi Lens"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jieba>=0.42.1",
  "numpy>=2.0.0",
  "pillow>=11.0.0",
  "pymupdf>=1.24.0",
  "paddleocr>=2.8.0",
  "pypinyin>=0.54.0"
]

[project.scripts]
ingest-material = "chinese_flashcards.cli:ingest_main"
export-published = "chinese_flashcards.cli:export_main"
backfill-published-examples = "chinese_flashcards.cli:backfill_examples_main"

[tool.hatch.build.targets.wheel]
packages = ["src/chinese_flashcards"]
